--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <p> The Four Skins Podcast
                         We finally did it! <br> A weekly Podcast where we talk about our lives, interesting topics and give our opinions on what life throws at us.</p>
                 </div>
+                <a href="podcast.html" title="My Podcast"><img src="images/boys_.png" alt="Andy" width="400" height="auto"></a>
             </article>
             <!--=======FOOTER-BLOCKQUOTE=======-->
             <blockquote><b>
