--- a/gallery.html
+++ b/gallery.html
@@ -25,9 +25,11 @@
             </ul>
         </nav>
         <!--======= CONTENT AREA 1=======-->
+ <section>
+            <!--Add in photos of some of the projects Clear Focus has done to show the user's and a few of the videos and short films he's created-->
+            <a href="images/woman1_pose.jpg" alt="Woman" width="auto" height="auto"></a>
 
-        <!--Add in photos of some of the projects Clear Focus has done to show the user's and a few of the videos and short films he's created-->
-
+        </section>
         <!--=======FOOTER-BLOCKQUOTE=======-->
         <blockquote><b>
                 “An Australian Based Photography/Film Production house specializing in making your visions true.”
