--- a/about.html
+++ b/about.html
@@ -29,18 +29,27 @@
             <div>
                 <h2>About ME</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    From the earliest moments of my life, the art of filmmaking has ignited a profound passion within me. The power of storytelling through the lens, capturing the essence of life's most treasured moments, has always fascinated me. It is this unwavering passion that led me to establish Clear Focus Pictures, an endeavor born out of the desire to provide clients with a deeply personal touch and a truly memorable cinematic experience.
+                <p>
+                    At Clear Focus Pictures, we take great pride in our approach as a smaller, dedicated team. This deliberate choice allows us to devote our undivided attention to a select number of clients at any given time. By limiting our focus, we ensure that each client receives our utmost care and commitment, guaranteeing an exceptional level of personalized service.
+                </p>
+                <p>
+                    Understanding the unique needs and desires of our clients is at the heart of what we do. We believe that every individual, every couple, and every family has a story waiting to be told. It is through thoughtful and attentive conversations that we delve into the core of their vision, unearthing the emotions, details, and aspirations that make their moments truly special. By investing this time, we forge a genuine connection that enables us to capture their essence with authenticity and creativity.
                 </p>
             </div>
-            <!-- Add photo of Andy here-->
             <a href="about.html" title="My Why"><img src="images/andy.jpeg" alt="Andy" width="400" height="534"></a>
         </section>
         <section id="about_me_2">
-            <!-- add photo of Andy -->
             <a href="about.html" title="My Why"><img src="images/andy.jpeg" alt="Andy" width="400" height="534"></a>
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Beyond simply documenting events, we strive to elevate the client's experience by providing our own artistic perspectives. Drawing from our expertise and refined cinematic sensibilities, we offer creative suggestions that enhance their vision, capturing their memories in ways they may not have even envisioned for themselves. This collaborative process, rooted in trust and open communication, ensures that their moments are immortalized on film in a manner that surpasses their wildest expectations.
+                </p>
+                <p>
+                    Clear Focus Pictures is more than just a name; it embodies our unwavering commitment to delivering extraordinary cinematography that breathes life into cherished memories. We believe that each frame should be a work of art, crafted with meticulous attention to detail and infused with the authentic emotions that define the moment. With a passion that knows no bounds, we strive to transform your special occasions into cinematic masterpieces, preserving them for generations to come.
+                </p>
+                <p>
+                    Join us on this enchanting journey as we encapsulate your memories, painting them onto the canvas of time. Clear Focus Pictures is here to tell your story with unwavering dedication, boundless creativity, and an unyielding commitment to excellence."
                 </p>
             </div>
         </section>
