--- a/contact.html
+++ b/contact.html
@@ -25,26 +25,20 @@
             </ul>
         </nav>
         <!--======= CONTENT AREA 1=======-->
-        <section>
+        <article id="contact">
             <h2>Contact Me</h2>
             <p>
-                Lorem ipsum dolor sit amet,
-
-                elit, sed do eiusmod tempor incididunt
-                <br>
-                <br>Ut enim ad minim veniam, quis nostrud exercitation
-
-                ullamco laboris nisi ut
-                <br>
-                <br>rem ipsum dolor sit amet,
-
-                elit, sed do eiusmod tempor incididunt
-                <br>
-                <br>Ut enim ad minim veniam, quis nostrud exercitation
-
-                ullamco laboris nisi ut
+                Want to use my services lets chat through my socials!
             </p>
-        </section>
+            <p>My Instagram: <a href="https://www.instagram.com/a.ndrewabraham/" title="Andrew's Instagram" rel="external" target="_blank">@a.ndrewabraham</a>!
+            </p>
+            <p>
+                FaceBook Messenger: <a href="https://www.facebook.com/andrew.abraham.794" title="Andrew's Facebook" rel="external" target="_blank"> Andrew Abraham</a>!
+            </p>
+            <p>
+                Or Email: <a href="mailto:clearfocuspictures@gmail.com">clearfocuspictures@gmail.com</a>!
+            </p>
+        </article>
         <!--=======FOOTER-BLOCKQUOTE=======-->
         <blockquote><b>
                 “An Australian Based Photography/Film Production house specializing in making your visions true.”
@@ -64,3 +58,4 @@
 </body>
 
 </html>
+
