--- a/gallery.html
+++ b/gallery.html
@@ -24,12 +24,42 @@
                 <li><a href="contact.html" title="Contact">Contact</a></li>
             </ul>
         </nav>
-        <!--======= CONTENT AREA 1=======-->
- <section>
-            <!--Add in photos of some of the projects Clear Focus has done to show the user's and a few of the videos and short films he's created-->
-            <a href="images/woman1_pose.jpg" alt="Woman" width="auto" height="auto"></a>
-
-        </section>
+        <!--======= PHOTO LINE 1=======-->
+        <article id="photos">
+            <section>
+                <img src="images/woman1_pose.jpg" alt="Woman" width="300" height="auto">
+            </section>
+            <div>
+                <img src="images/bride.jpg" alt="bride" width="400" height="auto">
+            </div>
+            <section>
+                <img src="images/Image.jpeg" alt="party" width="300" height="auto">
+            </section>
+        </article>
+        <!--======= PHOTO LINE 2=======-->
+        <article id="photos">
+            <div>
+                <img src="images/red_wall.png" alt="Red Wall" width="350" height="auto">
+            </div>
+            <section>
+                <img src="images/man4_beer.jpg" alt="Man with Beer" width="300" height="auto">
+            </section>
+            <div>
+                <img src="images/family.jpg" alt="Family Photo" width="350" height="auto">
+            </div>
+        </article>
+        <!--======= PHOTO LINE 3=======-->
+        <article id="photos">
+            <section>
+                <img src="images/flower.jpg" alt="Flowers" width="300" height="auto">
+            </section>
+            <div>
+                <img src="images/tree_bench.jpg" alt="bench" width="400" height="auto">
+            </div>
+            <section>
+                <img src="images/ring.jpg" alt="Ring" width="300" height="auto">
+            </section>
+        </article>
         <!--=======FOOTER-BLOCKQUOTE=======-->
         <blockquote><b>
                 “An Australian Based Photography/Film Production house specializing in making your visions true.”
@@ -49,3 +79,4 @@
 </body>
 
 </html>
+
