--- a/podcast.html
+++ b/podcast.html
@@ -25,12 +25,15 @@
             </ul>
         </nav>
         <!--======= CONTENT AREA 1=======-->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nZK9AS9yZJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-        <video><a href="https://www.youtube.com/watch?v=nZK9AS9yZJw"></a></video>
-
-        <!-- Will add an external link to a YouTube link of the latest POdcast episode-->
-
+        <article id="video">
+            <iframe width="600" height="430" src="https://www.youtube.com/embed/nZK9AS9yZJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div>
+                <h2>The Four Skins Chat Podcast</h2>
+                <p>Hey guys this is my weekly podcast channel. </p>
+                <p>If you're interested in my podcast  go visit my Youtube Channel <a href="https://www.youtube.com/@andrewabraham4350" title="Andrew Abraham" rel="external" target="_blank">Andrew Abraham</a> where there is also short films that I have created throughout my years studying at University</p>
+                <p>Also go check out my Instagram, <a href="https://www.instagram.com/a.ndrewabraham/" title="Andrew's Instagram" rel="external" target="_blank">@a.ndrewabraham</a>!</p>
+            </div>
+        </article>
         <!--=======FOOTER-BLOCKQUOTE=======-->
         <blockquote><b>
                 “An Australian Based Photography/Film Production house specializing in making your visions true.”
@@ -50,3 +53,4 @@
 </body>
 
 </html>
+
