--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div>
                     <h2><a href="about.html" title="My Why">My Why</a></h2>
                     <p>
-                        Videography and Photograpghy has always been a huge passion of mine, ever since I was younger I've always loved taking videos and photos of my friends and capturing those memories. [I have a degree in Screen Production, which has helped trememdously with learning how to create the perfect shot.]<br>    
-                        <!-- Will change the text in [ ] in the square brackets -->
-                        <br>I'm based in Perth but I love a good adventure and is willing to travel around the Peel Regions <br>
-                        <br> My goal is to create a fun and interactive expirence for you, to capture the shot that you envision!
+                        Videography and Photograpghy has always been a huge passion of mine, ever since I was younger I've always loved taking videos and photos of my friends and capturing those memories. I have a degree in Screen Production, which has helped trememdously with learning how to create the perfect shot.
+                    <p>I'm based in Perth but I love a good adventure and is willing to travel around the Peel Regions
+                    </p>
+                    <p> My goal is to create a fun and interactive expirence for you, to capture the shot that you envision!
                     </p>
                 </div>
                 <a href="about.html" title="My Why"><img src="images/andy.jpeg" alt="Andy" width="400" height="534"></a>
@@ -47,16 +47,18 @@
                         <h2>The Gallery</h2>
                     </a>
                     <p>
-                        [Come check out my gallery. <br><br>Where some of my work is showcased!] 
+                        Come check out my gallery. <br><br>Where some of my work is showcased!
                     </p>
                 </div>
             </article>
             <!--===CONTENT AREA 3===-->
             <article id="podcast">
                 <div>
-                    <a href="podcast.html" title="My Podcast"><h2>My Podcast</h2></a>
+                    <a href="podcast.html" title="My Podcast">
+                        <h2>My Podcast</h2>
+                    </a>
                     <p> The Four Skins Podcast
-                        We finally did it! <br> A weekly Podcast where we talk about our lives, interesting topics and give our opinions on what life throws at us.</p>
+                        We finally did it! <br> <br>A weekly Podcast where we talk about our lives, interesting topics and give our opinions on what life throws at us.</p>
                 </div>
                 <a href="podcast.html" title="My Podcast"><img src="images/boys_.png" alt="Andy" width="400" height="auto"></a>
             </article>
@@ -74,7 +76,6 @@
                     </li>
                 </ul>
             </footer>
-
         </main>
 
     </div>
