--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,14 @@
             <p>
                 Want to use my services lets chat through my socials!
             </p>
+            <img src="images/instagram_logo.png" alt="Instagram" width="50">
             <p>My Instagram: <a href="https://www.instagram.com/a.ndrewabraham/" title="Andrew's Instagram" rel="external" target="_blank">@a.ndrewabraham</a>!
             </p>
+            <img src="images/facebook_logo.png" alt="Facebook" width="55">
             <p>
                 FaceBook Messenger: <a href="https://www.facebook.com/andrew.abraham.794" title="Andrew's Facebook" rel="external" target="_blank"> Andrew Abraham</a>!
             </p>
+            <img src="images/email_logo.png" alt="Email" width="60">
             <p>
                 Or Email: <a href="mailto:clearfocuspictures@gmail.com">clearfocuspictures@gmail.com</a>!
             </p>
