--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
                     Understanding the unique needs and desires of our clients is at the heart of what we do. We believe that every individual, every couple, and every family has a story waiting to be told. It is through thoughtful and attentive conversations that we delve into the core of their vision, unearthing the emotions, details, and aspirations that make their moments truly special. By investing this time, we forge a genuine connection that enables us to capture their essence with authenticity and creativity.
                 </p>
             </div>
-            <a href="about.html" title="My Why"><img src="images/andy.jpeg" alt="Andy" width="400" height="534"></a>
+            <a href="about.html" title="My Why"><img src="images/andy_smile.jpeg" alt="Andy" width="400" height="534"></a>
         </section>
         <section id="about_me_2">
-            <a href="about.html" title="My Why"><img src="images/andy.jpeg" alt="Andy" width="400" height="534"></a>
+            <a href="about.html" title="My Why"><img src="images/andy_dark.png" alt="Andy" width="400" height="534"></a>
             <div>
                 <p>
                     Beyond simply documenting events, we strive to elevate the client's experience by providing our own artistic perspectives. Drawing from our expertise and refined cinematic sensibilities, we offer creative suggestions that enhance their vision, capturing their memories in ways they may not have even envisioned for themselves. This collaborative process, rooted in trust and open communication, ensures that their moments are immortalized on film in a manner that surpasses their wildest expectations.
@@ -73,3 +73,4 @@
 
 
 </html>
+
